--- a/resumos/s3.md
+++ b/resumos/s3.md
@@ -2,66 +2,95 @@
 
 ## O que é?
 
-* S3 é o serviço de **armazenamento de objetos** da AWS.
-* Ideal para armazenar arquivos estáticos como imagens, vídeos, documentos, backups, logs, etc.
-* Cada arquivo (objeto) é armazenado dentro de um **bucket**.
+* S3 é o serviço de **armazenamento de objetos** da AWS, projetado para escalar automaticamente conforme cresce a quantidade de dados.
+* Ideal para guardar arquivos estáticos como imagens, vídeos, documentos, backups, logs, e **hospedar sites estáticos**.
+* Cada arquivo (objeto) é armazenado dentro de um **bucket**, que funciona como um contêiner lógico.
+
+---
+
+## 📁 Bucket – Explicação Detalhada
+
+* **Bucket** é o recipiente principal onde você armazena seus objetos no S3.
+* Cada bucket pertence a uma única conta AWS e a uma região específica, mas o nome deve ser **único globalmente**.
+* **Criação**:
+
+  1. Escolha um nome descritivo e sem caracteres especiais (apenas letras minúsculas, números e hífens).
+  2. Determine a **região** mais próxima dos seus usuários para reduzir latência e custo.
+* **Regras de nomeação**:
+
+  * Deve ter entre 3 e 63 caracteres.
+  * Começar e terminar com letra ou número.
+  * Não pode conter espaços, sublinhados (\_), ponto (.) no início ou fim, ou sequência de pontos.
+* **Segurança e boas práticas**:
+
+  * Mantenha buckets **privados** por padrão.
+  * Ative **Block Public Access** para evitar exposição acidental.
+  * Use **tags** para identificar ambiente (dev, test, prod) e responsável.
+* **Dicas para a prova**:
+
+  * Entenda que o bucket age como front-end para APIs RESTful do S3.
+  * Saiba que buckets não possuem hierarquia real de pastas; é apenas convenção de nome.
+  * Que ao excluir um bucket, ele deve estar vazio antes de poder ser deletado.
 
 ---
 
 ## Principais conceitos
 
-### 📁 Bucket
-
-* É como um "pasta raiz" na AWS onde os arquivos são armazenados.
-* Cada bucket tem um nome **único globalmente**.
-* É possível configurar a região, permissões e versionamento.
-
 ### 📦 Objeto
 
-* É o arquivo em si (foto, .pdf, vídeo, etc).
-* Armazenado junto com metadados e uma chave de identificação (nome).
+* Um **objeto** no S3 é a menor unidade de dados armazenada.
+* Ele é composto por:
 
-### 🗂️ Estrutura de diretórios
+  * **Dados do arquivo** propriamente dito (ex: PDF, imagem, vídeo, log).
+  * **Metadados**: informações como tipo do conteúdo (ex: `image/jpeg`), data de modificação, codificação, etc.
+  * **Chave (Key)**: o nome exclusivo do objeto dentro do bucket. Pode conter barras para simular pastas (ex: `fotos/viagem/paris.jpg`).
+  * **Versão (opcional)**: se o bucket tiver versionamento ativado, cada alteração cria uma nova versão do objeto.
 
-* S3 **não possui estrutura de pastas real**, mas sim objetos com nomes que simulam diretórios (ex: `imagens/perfil/foto.jpg`).
+💡 **Importante saber:**
+
+* O nome do objeto pode ser usado como um identificador exclusivo.
+* Objetos podem ser acessados diretamente por URL (se públicos ou com permissões configuradas).
+* O tamanho máximo de um único objeto é de **5 TB**.
+* Objetos nunca são editados diretamente: uma nova versão deve ser enviada.
+
+---
 
 ### 🔐 Permissões
 
-* S3 é privado por padrão. Você precisa conceder acesso manualmente.
-* Tipos de controle:
+* Controle de acesso:
 
-  * ACLs (Access Control Lists)
-  * Bucket Policy (política escrita em JSON)
-  * IAM Policy (vinculada ao usuário ou grupo)
+  * **ACLs (Access Control Lists)**: permissões em nível de objeto ou bucket.
+  * **Bucket Policy**: política JSON aplicada ao bucket.
+  * **IAM Policy**: associada a usuários, grupos ou funções.
 
 ### ♻️ Versionamento
 
-* Permite manter **várias versões** de um mesmo arquivo.
-* Muito útil para backup, auditoria ou recuperação de dados apagados.
+* Mantém **várias versões** de um mesmo objeto, permitindo recuperação de versões anteriores.
+* Útil em: backup, auditoria e recuperação de dados apagados.
 
 ### 🧊 Classes de armazenamento
 
-* Diferentes classes conforme frequência de acesso:
+| Classe                         | Uso recomendado                                  | Custo       |
+| ------------------------------ | ------------------------------------------------ | ----------- |
+| **Standard**                   | Acesso frequente                                 | Alto        |
+| **Standard-IA**                | Acesso não frequente                             | Médio       |
+| **One Zone-IA**                | Acesso não frequente, menor custo                | Médio-Baixo |
+| **Glacier Instant Retrieval**  | Arquivamento com acesso rápido                   | Baixo       |
+| **Glacier Flexible Retrieval** | Arquivamento com recuperação em minutos ou horas | Muito baixo |
+| **Glacier Deep Archive**       | Arquivamento de longo prazo                      | Mínimo      |
 
-| Classe                    | Uso recomendado                  | Custo       |
-| ------------------------- | -------------------------------- | ----------- |
-| S3 Standard               | Acesso frequente                 | Alto        |
-| S3 IA (Infrequent Access) | Acesso eventual                  | Médio       |
-| S3 Glacier                | Arquivamento (recuperação lenta) | Baixo       |
-| S3 Glacier Deep Archive   | Arquivamento de longo prazo      | Muito baixo |
-
-✅ **Dica**: Use regras de **lifecycle** para mover automaticamente objetos para classes mais baratas ao longo do tempo.
+✅ **Dica**: Defina **lifecycle policies** para mover objetos automaticamente entre classes conforme envelhecem.
 
 ---
 
 ## 🧠 Curiosidades e boas práticas
 
-* S3 tem **alta durabilidade (99.999999999%)** e é replicado automaticamente entre múltiplos datacenters da AWS.
-* Você pode **hospedar sites estáticos** diretamente em um bucket S3.
-* Existe limite por padrão de 100 buckets por conta – mas cada bucket pode conter milhões de objetos.
-* Objetos individuais podem ter até **5 TB**.
-* Evite deixar buckets públicos abertos – isso é uma **falha comum de segurança**.
-* Com o S3 Transfer Acceleration, é possível acelerar o upload de arquivos grandes por rede global da AWS.
+* Alta durabilidade de **11 9's** (99.999999999%) graças à replicação automática.
+* Bucket pode armazenar até **5 TB** por objeto.
+* O número padrão de buckets por conta é 100; lembre-se de planejar a organização.
+* Use **Transfer Acceleration** para uploads mais rápidos em grandes distâncias.
+* **Cache** de metadados: solicitações GET podem ser aceleradas com CloudFront.
+* Replique dados automaticamente entre regiões com **S3 Cross-Region Replication** (CRR).
 
 ---
 
@@ -69,25 +98,30 @@
 
 ```bash
 # Criar um bucket
-aws s3 mb s3://meu-novo-bucket
+aws s3 mb s3://meu-bucket-exemplo --region sa-east-1
+
+# Configurar Block Public Access (todas as configurações)
+aws s3api put-public-access-block \
+  --bucket meu-bucket-exemplo \
+  --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
 
 # Enviar um arquivo para o bucket
-aws s3 cp meu-arquivo.txt s3://meu-novo-bucket
+aws s3 cp local.txt s3://meu-bucket-exemplo/pasta/local.txt
 
 # Listar arquivos de um bucket
-aws s3 ls s3://meu-novo-bucket
+aws s3 ls s3://meu-bucket-exemplo --recursive
 
-# Ativar versionamento
+# Ativar versionamento no bucket
 aws s3api put-bucket-versioning \
-  --bucket meu-novo-bucket \
+  --bucket meu-bucket-exemplo \
   --versioning-configuration Status=Enabled
 
-# Aplicar política pública (exemplo - usar com cuidado)
-aws s3api put-bucket-policy \
-  --bucket meu-novo-bucket \
-  --policy file://politica.json
+# Definir lifecycle para mover objetos para Glacier após 30 dias
+aws s3api put-bucket-lifecycle-configuration \
+  --bucket meu-bucket-exemplo \
+  --lifecycle-configuration file://lifecycle.json
 ```
 
 ---
 
-📚 Continue praticando o S3 com diferentes cenários, como hospedagem de site, backup automático e controle de acesso com IAM!
+> 🌱 **Dica extra**: Teste sempre políticas e lifecycle em um bucket de desenvolvimento antes de aplicar em produção.
