--- a/resumos/s3.md
+++ b/resumos/s3.md
@@ -33,6 +33,20 @@
   * Que ao excluir um bucket, ele deve estar vazio antes de poder ser deletado.
 
 ---
+🗒️ Analogia simplificada
+
+Para quem está começando do zero, pense no S3 assim:
+
+Bucket ≈ Pasta raiz de um sistema de arquivos (ex: C:\ no Windows ou / no Linux).
+
+Objeto ≈ Arquivo dentro dessa pasta.
+
+Assim como você não pode salvar arquivos fora de C:\ ou /, no S3 você só armazena objetos dentro de um bucket.
+
+Não existe hierarquia real de pastas — tudo são objetos com nomes únicos (chaves), onde docs/relatorio.pdf é apenas um prefixo de nome.
+
+Dica de prova: Entenda bem essa analogia para diferenciar buckets de objetos e para lembrar das regras de nomeação e exclusão (um bucket deve estar vazio para ser removido).
+
 
 ## Principais conceitos
 
