--- a/resumos/s3.md
+++ b/resumos/s3.md
@@ -33,7 +33,7 @@
   * Que ao excluir um bucket, ele deve estar vazio antes de poder ser deletado.
 
 ---
-🗒️ Analogia simplificada
+🗒️ **Analogia simplificada**
 
 Para quem está começando do zero, pense no S3 assim:
 
@@ -47,7 +47,7 @@ Não existe hierarquia real de pastas — tudo são objetos com nomes únicos (c
 
 Dica de prova: Entenda bem essa analogia para diferenciar buckets de objetos e para lembrar das regras de nomeação e exclusão (um bucket deve estar vazio para ser removido).
 
-
+---
 ## Principais conceitos
 
 ### 📦 Objeto
