--- a/resumos/s3.md
+++ b/resumos/s3.md
@@ -37,7 +37,7 @@
 
 Para quem está começando do zero, pense no S3 assim:
 
-Bucket ≈ Pasta raiz de um sistema de arquivos (ex: C:\ no Windows ou / no Linux).
+Bucket ≈ Pasta raiz de um sistema de arquivos (ex: C:\fotos\... no Windows ou / no Linux).
 
 Objeto ≈ Arquivo dentro dessa pasta.
 
